--- a/src/containers/Navigation/styles/index.scss
+++ b/src/containers/Navigation/styles/index.scss
@@ -13,14 +13,12 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
-    
-    &__item {
-      color: black;
-      text-decoration: none;
-      &--active {
-        font-weight: 700;
-      }
-    }
+  }
+
+  &__logout {
+    position: absolute;
+    bottom: 0;
+    padding: 25px 0;
   }
 
   @media screen and (max-width: $sm) {
