adding greetings component and balance service implementation

--- a/src/components/Navigation/styles/index.scss
+++ b/src/components/Navigation/styles/index.scss
@@ -3,7 +3,7 @@
 
 .fe-wallet__content__navigation {
   background-color: $secondary-base-color;
-  width: 256px;
+  min-width: 256px;
   margin: 0;
   padding: 0;
   height: 100%;
