--- a/src/containers/App/styles/colours.scss
+++ b/src/containers/App/styles/colours.scss
@@ -7,3 +7,7 @@ $secondary-base-color: #FFFFFF;
 // CTA
 $primary_color: #7908FF;
 $primary-cta-color: linear-gradient(90deg, $primary_color 0%, #8B43E0 100%);
+
+// Text
+$primary-text-color: #373744;
+$secondary-text-color: #A5A7AF;
