--- a/src/containers/App/styles/colours.scss
+++ b/src/containers/App/styles/colours.scss
@@ -1,5 +1,5 @@
 // Base
-$primary-background-color: #E5E5E5;
+$primary-background-color:  #FDFCFF;
 $secondary-background-color: #27251f;
 $primary-base-color: #242424;
 $secondary-base-color: #FFFFFF;
@@ -11,3 +11,6 @@ $primary-cta-color: linear-gradient(90deg, $primary_color 0%, #8B43E0 100%);
 // Text
 $primary-text-color: #373744;
 $secondary-text-color: #A5A7AF;
+
+// Borders
+$primary-border-color: #D8D9E2;
