--- a/src/components/Dropdown/styles/index.scss
+++ b/src/components/Dropdown/styles/index.scss
@@ -1,6 +1,8 @@
+@import "../../../containers/App/styles/colours.scss";
+
 select.fe-wallet__dropdown {
-  border: 1px solid #E5E5E5;
-  background-color: #E5E5E5;
+  border: 1px solid $primary-background-color;
+  background-color: $primary-background-color;
 
   &:focus-visible {
     outline: none !important;
@@ -8,6 +10,6 @@ select.fe-wallet__dropdown {
   
   &__balance {
     font-size: 11px;
-    color: #A5A7AF;
+    color: $secondary-text-color;
   }
 }
