--- a/src/containers/App/styles/index.scss
+++ b/src/containers/App/styles/index.scss
@@ -3,11 +3,13 @@
 html, body, #root {
   width: 100%;
   height: 100%;
+  font-family: 'Lato';
 }
 
 .fe-wallet {
   width: 100%;
   height: 100%;
+  font-family: 'Lato';
   text-align: center;
   background-color: $primary-background-color;
 
