--- a/src/containers/App/styles/colours.scss
+++ b/src/containers/App/styles/colours.scss
@@ -1,6 +1,7 @@
 // Base
 $primary-background-color:  #FDFCFF;
 $secondary-background-color: #27251f;
+$tertiary-background-color: #00000043;
 $primary-base-color: #242424;
 $secondary-base-color: #FFFFFF;
 
