transaccion-purchase-implementation

--- a/src/components/BalanceDetail/styles/index.scss
+++ b/src/components/BalanceDetail/styles/index.scss
@@ -91,3 +91,15 @@
     }
   }
 }
+
+.fe-wallet__input {
+  &__messages {
+    font-size: 12px;
+    color: $primary-text-color;
+    &__text {
+      &--warning {
+        color: #dc3545;
+      }
+    }
+  }
+}
