--- a/src/components/Modal/styles/index.scss
+++ b/src/components/Modal/styles/index.scss
@@ -33,6 +33,7 @@
       color: $primary-text-color;
       box-shadow: 0px 2px 3px 0px $primary-border-color;
       &__close {
+        cursor: pointer;
         font-size: 32px;
       }
     }
