--- a/src/components/Converter/styles/index.scss
+++ b/src/components/Converter/styles/index.scss
@@ -1,3 +1,57 @@
-.fe-wallet__content__converter {
-  
+@import "../../../containers/App/styles/colours.scss";
+
+.fe-wallet__converter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: 3rem 0 4.5rem 0;
+  select.fe-wallet__dropdown {
+    font-family: Lato;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+    background-color: $primary-background-color;
+  }
+  input {
+    font-family: Lato;
+    font-size: 40px;
+    margin-left: 17.5px;
+    font-weight: 300;
+    line-height: 58px;
+    letter-spacing: 0px;
+    text-align: left;
+    width: 240px;
+    border: none;
+    background-color: $primary-background-color;
+    border-bottom: 1px solid $primary_color;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &__icon {
+    .icon {
+      fill: $primary-border-color;
+    }
+  }
+  &__submit {
+    font-family: 'Lato';
+    color: white;
+    height: 44px;
+    width: 240px;
+    left: 0px;
+    border: none;
+    top: 0px;
+    border-radius: 22px;
+    background: $primary-cta-color;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 16px;
+    letter-spacing: 0px;
+    text-align: center;
+    cursor: pointer;
+  }
 }
