--- a/src/containers/App/styles/colours.scss
+++ b/src/containers/App/styles/colours.scss
@@ -4,6 +4,7 @@ $secondary-background-color: #27251f;
 $tertiary-background-color: #00000043;
 $primary-base-color: #242424;
 $secondary-base-color: #FFFFFF;
+$tertiary-background-color: #EBEBEB;
 
 // CTA
 $primary_color: #7908FF;
