moving all hardcoded strings to constants in order to add in future commit i18n

--- a/src/containers/App/styles/colours.scss
+++ b/src/containers/App/styles/colours.scss
@@ -4,7 +4,7 @@ $secondary-background-color: #27251f;
 $tertiary-background-color: #00000043;
 $primary-base-color: #242424;
 $secondary-base-color: #FFFFFF;
-$tertiary-background-color: #EBEBEB;
+$tertiary-base-color: #EBEBEB;
 
 // CTA
 $primary_color: #7908FF;
