--- a/src/components/MaintenancePage/styles/index.scss
+++ b/src/components/MaintenancePage/styles/index.scss
@@ -7,7 +7,7 @@
   margin: 1rem 3rem;
   border-radius: 21px;
   padding: 4rem 0rem;
-  background-color: $tertiary-background-color;
+  background-color: $tertiary-base-color;
   flex-direction: column;
   align-items: stretch;
 }
