--- a/src/components/BalanceDetail/styles/index.scss
+++ b/src/components/BalanceDetail/styles/index.scss
@@ -27,6 +27,10 @@
     flex-wrap: wrap;
     flex-direction: column;
 
+    @media screen and (max-width: 400px) {
+      min-width: 252px;
+    }
+
     &__header {
       display: flex;
       width: 100%;
@@ -89,5 +93,8 @@
       letter-spacing: 0px;
       text-align: center;
     }
+  }
+  @media screen and (max-width: 1000px) {
+    justify-content: center;
   }
 }
