--- a/src/components/BalanceDetailCard/styles/index.scss
+++ b/src/components/BalanceDetailCard/styles/index.scss
@@ -27,6 +27,10 @@
     flex-wrap: wrap;
     flex-direction: column;
 
+    @media screen and (max-width: 400px) {
+      min-width: 252px;
+    }
+
     &__header {
       display: flex;
       width: 100%;
