--- a/src/components/Navigation/styles/index.scss
+++ b/src/components/Navigation/styles/index.scss
@@ -21,7 +21,7 @@
     padding: 25px 0;
   }
 
-  @media screen and (max-width: $sm) {
+  @media screen and (max-width: 800px) {
     display: none;
   }
 }
