enhancement/responsiveness-modal

--- a/src/components/InputMessages/styles/index.scss
+++ b/src/components/InputMessages/styles/index.scss
@@ -9,6 +9,8 @@
     margin: 0;
     text-align: left;
     padding: 1rem 0;
+    display: flex;
+    
     &__label {
       font-size: 13px;
       padding: 0;
